login and logout

--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@toruslabs/eccrypto": "^4.0.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@web3auth/base": "^7.0.1",
+    "@web3auth/ethereum-provider": "^7.0.2",
+    "@web3auth/no-modal": "^7.0.1",
+    "@web3auth/openlogin-adapter": "^7.0.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^6.7.1",
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
